<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_descripcion"
        android:inputType="text"
        android:hint="@string/descripcion"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_fecha_inicio"
        android:inputType="text"
        android:hint="@string/fecha_inicio"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_fecha_fin"
        android:inputType="text"
        android:hint="@string/fecha_fin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_total_horas"
        android:inputType="number"
        android:hint="@string/total_horas"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_personal"
        android:inputType="text"
        android:hint="@string/personal"
        />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_margin="@dimen/margin_button"
            android:layout_width="@dimen/whidth_button"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/bt_save"
            android:background="@color/colorPrimary"
            android:textColor="#ffff"
            />
        <Button
            android:layout_margin="@dimen/margin_button"
            android:layout_width="@dimen/whidth_button"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:id="@+id/bt_list"
            android:background="@color/colorAccent"
            android:textColor="#ffff"
            />
    </LinearLayout>
</LinearLayout>